Fix glitching(first tab) when collapsing

--- a/tabgroups.css
+++ b/tabgroups.css
@@ -213,7 +213,6 @@ tab-group:not(:has(tab:not([hidden]))) {
       & tab {
         z-index: -1 !important;
         opacity: 0 !important;
-        transform: translateY(-25px);
       }
 
       & .tab-group-label-container > label::before {
